--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,34 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <declare-styleable name="VerticalStepView">
+        <!--时间轴偏移值-->
+        <attr name="line_margin_side" format="dimension" />
+        <!--时间轴动态调整值-->
+        <attr name="line_dynamic_dimen" format="dimension" />
+        <!--线宽-->
+        <attr name="line_stroke_width" format="dimension" />
+        <!--完成線的颜色-->
+        <attr name="complete_line_color" format="color" />
+        <!--未完成線的颜色-->
+        <attr name="uncomplete_line_color" format="color" />
+        <!--点的大小-->
+        <attr name="point_size" format="dimension" />
+        <!--完成点的颜色-->
+        <attr name="complete_point_color" format="color" />
+        <!--未完成点的颜色-->
+        <attr name="uncomplete_point_color" format="color" />
+        <!--图标-->
+        <attr name="icon_src" format="reference" />
+        <!--时间轴的gravity-->
+        <!--the gravity of the timeline-->
+        <attr name="line_gravity">
+            <enum name="Left" value="2" />
+            <enum name="Right" value="4" />
+            <enum name="Middle" value="0" />
+            <enum name="Top" value="1" />
+            <enum name="Bottom" value="3" />
+        </attr>
+    </declare-styleable>
+
 </resources>
